--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -13,35 +14,34 @@
     body {
       font-family: 'Inter', sans-serif;
     }
+
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
+
     .animate-fade-in {
       animation: fadeIn 0.6s ease-out forwards;
     }
+
     ::selection {
       background: #0f172a;
       color: white;
     }
   </style>
-<script type="importmap">
-{
-  "imports": {
-    "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.11.4",
-    "react": "https://esm.sh/react@19.2.0",
-    "react-dom": "https://esm.sh/react-dom@19.2.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/index.css">
 </head>
+
 <body class="bg-slate-50 text-slate-800">
-  <script>
-    // Set your Google API key here
-    window.GOOGLE_API_KEY = "AIzaSyBibTGI9qnmdbEY0D8Mo72R2tC9gRM477g";
-  </script>
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
